--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,12 +9,12 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/gaeta/Desktop/securityCourse/src/Controller/HomeController.php'|file_link(0) }}">src/Controller/HomeController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/gaeta/Desktop/securityCourse/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
-    </ul>
+    <h1>Hello {{ app.user.userIdentifier|upper }}! ✅</h1>
+
+
+    <h2>If you see this, you are logged as USER or ADMIN</h2>
+    <h3>{{ dump(app.user) }}</h3>
+
 </div>
 {% endblock %}
